--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -319,6 +319,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.5 cm de variation pour h est acceptable( problème quand on va voir la courbe on voit que c'est que une augmentation)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
